[gd_scene load_steps=5 format=3 uid="uid://dj7p56yalgbgn"]

[ext_resource type="PackedScene" uid="uid://dq7fsblgkj7p2" path="res://Scenes/Match/Cards/CardHolder.tscn" id="1_posy3"]
[ext_resource type="Script" path="res://Scripts/board.gd" id="1_u5pv8"]
[ext_resource type="Script" path="res://Scripts/boardSide.gd" id="2_awlky"]
[ext_resource type="PackedScene" uid="uid://cy67x21oxawpd" path="res://Scenes/Match/Deck.tscn" id="3_u8aqe"]

[node name="Board" type="Control" node_paths=PackedStringArray("cardHolderContainer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_u5pv8")
cardHolderContainer = NodePath("AllySide/CardHolderContainer")

[node name="AllySide" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_awlky")

[node name="Deck" parent="AllySide" node_paths=PackedStringArray("boardSide") instance=ExtResource("3_u8aqe")]
layout_mode = 0
offset_left = 834.0
offset_top = 458.0
offset_right = 984.0
offset_bottom = 608.0
mouse_filter = 0
boardSide = NodePath("..")

[node name="CardHolderContainer" type="Control" parent="AllySide"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardHolder" parent="AllySide/CardHolderContainer" node_paths=PackedStringArray("boardSide") instance=ExtResource("1_posy3")]
layout_mode = 0
offset_left = 219.0
offset_top = 455.0
offset_right = 369.0
offset_bottom = 605.0
types = Array[int]([0, 3, 2])
boardSide = NodePath("../..")

[node name="CardHolder2" parent="AllySide/CardHolderContainer" node_paths=PackedStringArray("boardSide") instance=ExtResource("1_posy3")]
layout_mode = 0
offset_left = 419.0
offset_top = 455.0
offset_right = 569.0
offset_bottom = 605.0
types = Array[int]([0, 3, 2])
boardSide = NodePath("../..")

[node name="CardHolder3" parent="AllySide/CardHolderContainer" node_paths=PackedStringArray("boardSide") instance=ExtResource("1_posy3")]
layout_mode = 0
offset_left = 605.0
offset_top = 460.0
offset_right = 755.0
offset_bottom = 610.0
types = Array[int]([0, 3, 2])
boardSide = NodePath("../..")

[node name="EnemySide" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_awlky")
playerOwner = 1

[node name="Deck" parent="EnemySide" node_paths=PackedStringArray("inventory", "boardSide") instance=ExtResource("3_u8aqe")]
layout_mode = 0
offset_left = 834.0
offset_top = 142.0
offset_right = 984.0
offset_bottom = 292.0
mouse_filter = 0
inventory = NodePath("../../AllySide/Deck/CardInventoryComponent")
boardSide = NodePath("..")

[node name="CardHolderContainer" type="Control" parent="EnemySide"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardHolder" parent="EnemySide/CardHolderContainer" node_paths=PackedStringArray("inventory", "boardSide") instance=ExtResource("1_posy3")]
layout_mode = 0
offset_left = 213.0
offset_top = 141.0
offset_right = 363.0
offset_bottom = 291.0
inventory = NodePath("../../../AllySide/CardHolderContainer/CardHolder/CardInventoryComponent")
types = Array[int]([0, 3, 2])
boardSide = NodePath("../..")

[node name="CardHolder2" parent="EnemySide/CardHolderContainer" node_paths=PackedStringArray("inventory", "boardSide") instance=ExtResource("1_posy3")]
layout_mode = 0
offset_left = 413.0
offset_top = 141.0
offset_right = 563.0
offset_bottom = 291.0
inventory = NodePath("../../../AllySide/CardHolderContainer/CardHolder2/CardInventoryComponent")
types = Array[int]([0, 3, 2])
boardSide = NodePath("../..")

[node name="CardHolder3" parent="EnemySide/CardHolderContainer" node_paths=PackedStringArray("inventory", "boardSide") instance=ExtResource("1_posy3")]
layout_mode = 0
offset_left = 599.0
offset_top = 146.0
offset_right = 749.0
offset_bottom = 296.0
inventory = NodePath("../../../AllySide/CardHolderContainer/CardHolder3/CardInventoryComponent")
types = Array[int]([0, 3, 2])
boardSide = NodePath("../..")
