[gd_scene load_steps=12 format=3 uid="uid://ble2ckd3pj80p"]

[ext_resource type="Script" path="res://Scripts/Managers/matchManager.gd" id="1_8upiq"]
[ext_resource type="PackedScene" uid="uid://n1sl8tppdbj6" path="res://Scenes/Match/Hand.tscn" id="1_olbnx"]
[ext_resource type="Script" path="res://Scripts/board.gd" id="1_xlhae"]
[ext_resource type="Script" path="res://Scripts/boardSide.gd" id="2_fhjf2"]
[ext_resource type="PackedScene" uid="uid://cy67x21oxawpd" path="res://Scenes/Match/Deck.tscn" id="3_lun4x"]
[ext_resource type="Theme" uid="uid://dkk6wb0dyxbg4" path="res://Themes/Theme.tres" id="4_1hrnf"]
[ext_resource type="PackedScene" uid="uid://dq7fsblgkj7p2" path="res://Scenes/Match/Cards/CardSlot.tscn" id="4_m6yoo"]
[ext_resource type="PackedScene" uid="uid://cne3o0ms458al" path="res://Scenes/Components/CardInventoryComponent.tscn" id="5_kmtu5"]
[ext_resource type="PackedScene" uid="uid://cvw5tn7hsvms5" path="res://Scenes/Match/Graveyard.tscn" id="9_tb51e"]
[ext_resource type="Script" path="res://Scripts/Managers/battleManager.gd" id="11_ufw3r"]
[ext_resource type="Script" path="res://Scripts/Managers/playerManager.gd" id="12_f627q"]

[node name="Match" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8upiq")

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource("12_f627q")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("11_ufw3r")

[node name="Board" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xlhae")

[node name="AllySide" type="Control" parent="Board"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_fhjf2")

[node name="Deck" parent="Board/AllySide" instance=ExtResource("3_lun4x")]
layout_mode = 0
offset_left = 896.0
offset_top = 455.0
offset_right = 1046.0
offset_bottom = 605.0
mouse_filter = 0

[node name="CardSlotContainer" type="Control" parent="Board/AllySide"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardSlot" parent="Board/AllySide/CardSlotContainer" instance=ExtResource("4_m6yoo")]
layout_mode = 0
offset_left = 304.0
offset_top = 460.0
offset_right = 454.0
offset_bottom = 610.0
types = Array[int]([0, 3, 2])

[node name="CardHolder2" parent="Board/AllySide/CardSlotContainer" instance=ExtResource("4_m6yoo")]
layout_mode = 0
offset_left = 454.0
offset_top = 460.0
offset_right = 604.0
offset_bottom = 610.0
types = Array[int]([0, 3, 2])

[node name="CardHolder3" parent="Board/AllySide/CardSlotContainer" instance=ExtResource("4_m6yoo")]
layout_mode = 0
offset_left = 609.0
offset_top = 460.0
offset_right = 759.0
offset_bottom = 610.0
types = Array[int]([0, 3, 2])

[node name="CardInventoryComponent" parent="Board/AllySide" instance=ExtResource("5_kmtu5")]

[node name="Graveyard" parent="Board/AllySide" instance=ExtResource("9_tb51e")]
layout_mode = 0
offset_left = 40.0
offset_top = 455.0
offset_right = 190.0
offset_bottom = 605.0

[node name="InsideArea" type="Control" parent="Board/AllySide"]
layout_mode = 1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="EnemySide" type="Control" parent="Board"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_fhjf2")

[node name="Deck" parent="Board/EnemySide" instance=ExtResource("3_lun4x")]
layout_mode = 0
offset_left = 896.0
offset_top = 40.0
offset_right = 1046.0
offset_bottom = 190.0
mouse_filter = 0

[node name="CardSlotContainer" type="Control" parent="Board/EnemySide"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardSlot" parent="Board/EnemySide/CardSlotContainer" instance=ExtResource("4_m6yoo")]
layout_mode = 0
offset_left = 304.0
offset_top = 40.0
offset_right = 454.0
offset_bottom = 190.0
types = Array[int]([0, 3, 2])
initCardId = "B002"

[node name="CardHolder2" parent="Board/EnemySide/CardSlotContainer" instance=ExtResource("4_m6yoo")]
layout_mode = 0
offset_left = 453.0
offset_top = 40.0
offset_right = 603.0
offset_bottom = 190.0
types = Array[int]([0, 3, 2])

[node name="CardHolder3" parent="Board/EnemySide/CardSlotContainer" instance=ExtResource("4_m6yoo")]
layout_mode = 0
offset_left = 605.0
offset_top = 40.0
offset_right = 755.0
offset_bottom = 190.0
types = Array[int]([0, 3, 2])

[node name="CardInventoryComponent" parent="Board/EnemySide" instance=ExtResource("5_kmtu5")]

[node name="Graveyard" parent="Board/EnemySide" instance=ExtResource("9_tb51e")]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 190.0
offset_bottom = 190.0

[node name="AllyHand" parent="." instance=ExtResource("1_olbnx")]
layout_mode = 1

[node name="EnemyHand" parent="." instance=ExtResource("1_olbnx")]
layout_mode = 1

[node name="EndTurn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_1hrnf")
text = "End Turn"

[connection signal="button_down" from="EndTurn" to="." method="_on_end_turn_button_down"]

[editable path="EnemyHand"]
